# DontFoolMeTwice

./: .gitignore  CMakeLists.txt
RayFronts/: .gitmodules  README.md
RayFronts/rayfronts/configs/dataset/: dummy.yaml
RayFronts/rayfronts/configs/mapping/: semantic_occ_vdb_map.yaml  semantic_ray_frontiers_map.yaml
RayFronts/rayfronts/datasets/: __init__.py  dummy.py  ros.py
RayFronts/rayfronts/image_encoders/: base.py
RayFronts/rayfronts/image_encoders/trident/: trident.py
RayFronts/rayfronts/mapping/: base.py  semantic_occ_vdb_map.py  semantic_point_cloud.py  semantic_ray_frontiers_map.py  semantic_voxel_map.py
config/: mapping_config.yaml  planner.rviz
launch/: resilience.launch.py
resilience/: __init__.py  cause_registry.py  naradio_processor.py  path_manager.py  pointcloud_utils.py  radesg_base.py  radseg.py  risk_buffer.py  semantic_info_bridge.py  voxel_gp_helper.py
scripts/: drone_mppi_node.py  frontier_mapping_node.py  main.py  primitive_planner_node.py  vlm_node.py
scripts/utils/: analyse_gp.py  calibrate_drift.py  cost_analysis.py  sample_gp.py  traj_comparison.py  trajectory_analysis.py
